# eRob_Compensation_Controller

./: .gitignore  README.md
demo/: CMakeLists.txt  eRob.h  eRob_PT.cpp  eRob_PT_Project_Introduction_EN.md  eRob_PT_功能说明文档.md  freq_scan.cpp  freq_scan.h  friction_identify.cpp  friction_identify.h  integrator.cpp  integrator.h  log.h  lpf.cpp  lpf.h  motor_control.cpp  motor_control.h  slop.cpp  slop.h  tf_2rd.cpp  tf_2rd.h  yzdn_math.cpp  yzdn_math.h
osal/linux/: osal_defs.h
soem/: ethercatconfig.c
test/linux/simple_test/: eRob_test.cpp  github.cpp
